--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DynamicCarouselApp"
         tools:targetApi="31">
-        <!--<activity
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication">
+            android:theme="@style/Theme.DynamicCarouselApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>-->
+        </activity>
 
-        <activity
+     <!--   <activity
             android:name=".presentation.main.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
@@ -34,7 +33,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity>-->
 
 
     </application>
